


-------------------------------------------------------------------
3.20.1:
-Bug fix for info balloons to not word wrap lines (was minimizing balloon width too much on mobile)
-Fixed error logging for base pairings info, when chart / price alert runs for BTC / USD markets
-------------------------------------------------------------------



-------------------------------------------------------------------
3.20.2:
-Bug fix for broken HTML in new code
-HTML validation / optimizations
-------------------------------------------------------------------



-------------------------------------------------------------------
3.21.0:
-Cleaned up margin trades UI / UX
-Added margin short trade tracking
-Minor misc. UX tweaks
-------------------------------------------------------------------



-------------------------------------------------------------------
3.22.0:
-Block volume error configuration setting
-UI / UX tweaks
-Modularized some code into separate files / functions
-Minor bug fixes
-------------------------------------------------------------------



-------------------------------------------------------------------
3.23.0:
-UI / UX tweaks
-More USDC markets in default config
-Moved chart backup downloads to run from download.php
-------------------------------------------------------------------



-------------------------------------------------------------------
3.23.1:
-Bug fix on Update Assets page for checkboxes
-Compatibility CSS for charts
-------------------------------------------------------------------



-------------------------------------------------------------------
3.24.0:
-Added dark color scheme, and color scheme switcher setting 
-------------------------------------------------------------------



-------------------------------------------------------------------
3.25.0:
-Consolidated theme-coloring-only CSS
-------------------------------------------------------------------









































