@@ -4,7 +4,6 @@ Default Theme
 /* overall */
 .tablesorter-dark {
 	color: #333;
-	background-color: #2C3441;
 	border-spacing: 0;
 	margin: 10px 0 15px;
 	text-align: left;
